static/css/blogr.css
/* ... */
.pagination > li > a,
.pagination > li > a,
.pagination > li > span,
.pagination > li > span {
    /*z-index: 3;*/
    /*color: #23527c;*/
    /*border-color: #ddd;*/
    color: #ccc !important;
    background-color: #1c2024 !important;
    /*background-color: #343a40 !important;*/
}


.pagination {
    margin-top: 0.5em;
    margin-bottom: 0.5em;
}


.pagination .page-item:first-child {
    margin-left: auto;
}
.pagination .page-item:last-child {
    margin-right: auto;
}


.v-pagnav-before {
    
}

.v-pagnav-nav {
    
}

.v-pagnav-after {
    text-align: center;
    align-self: center;
}

.pagination-ipp {
    background-color: #444;
    color: #fff;
    border: 1px solid #de6d11;
    border-radius: .4em;
    padding: 4px;
}

.pagination-ipp option {
    background-color: #333;
}

hr {
    border-top: 1px solid #777;
}

hr.preview-divider {
    height: 0px;
    border-top: 1px dashed #aaa;
}



/*{
orange:   #de6d11
dark ora: #853c01
}*/

/*  #de6d11 #853c01  */

.v-am-list {
    list-style-type: none;
    padding-left: 0px;
    padding-right: 0px;
}

.v-am-item-bottom {
    padding-top: 0.4em;
}

.v-am-list li:nth-of-type(odd) {
    background-color: #32383e;
}

.v-am-item {
    background-color: #212529;
    border-left: 3px solid #de6d11;
    border-right: 1px solid #853c01;
    border-bottom: 1px solid #853c01;
    border-top: 1px solid #853c01;
    padding: 0px 9px 0.4em 10px;
    margin-left: 0px;
    margin-right: 0px;
    min-width: 100%;
    margin-bottom: 1.5em;
    border-radius: 1em;
    
}

li.v-am-item:hover {
    /*background-color: rgba(200,200,200,.2);*/
    background-color: #1a1e21;
}
.v-am-list li:nth-of-type(odd):hover {
    /*background-color: rgba(0,0,0,.2);*/
    background-color: #424649;
}

li.v-am-item:hover hr.v-am-item-tag-divider:after {
    background-color: #1a1e21;
}

li.v-am-item:nth-of-type(odd):hover hr.v-am-item-tag-divider:after {
    background-color: #424649;
}

.v-am-item:hover {
    border-left: 8px solid #de6d11;
    border-right: 6px solid #de6d11;
    border-top: 1px solid #de6d11;
    border-bottom: 1px solid #de6d11;
    padding-left: 5px;
    padding-right: 4px;
}

.v-am-itemlink {
    font-family:  vishusBlogTitle, 'Century Gothic', verdana, 'trebuchet ms', Tahoma, 'sans-serif', times;
    font-size: 110%;
    padding-left: 1em;
    width: 100%;
    padding-top: 0.4rem;
    padding-bottom: .5rem;
    padding-right: 1em;
    margin-left: 10px;
    margin-right: 11px;
    border-radius: 0.5em 0.5em 0px 0px;
    /*border-bottom: 1px dashed #666; */
}

.v-am-itemlink:hover {
    background-color: #de6d11;
}

.v-am-itemlink i {
    color: #fff;
}
.v-am-item-viewlink-a {
    padding-right: 1em;
}

.v-am-item-posted {
    font-size: 90%;
}

.v-am-item-posted {
    font-size: 90%;
}

.v-am-item-tags {
    /*margin: .25em 11px -7px 10px;*/
    margin: .25em 11px .2em 10px;
    /*border-top: 1px dashed #777;*/
    /*padding-top: 0.5em;*/
}

.v-am-item-tag {
    
}

.v-am-divider {
    clear: both;
}
.v-am-item-tag-divider {
    size: 1px;
    border-top: 1px dashed #777;
}

.v-am-divider {
    /* clear: both; */
    width: 100%;
    padding: 0px 11px 0px 10px;
}
.v-am-item-tag-divider {
    size: 1px;
    border-top: 1px solid #666;
    margin: 1em 0px 0.5em 0px;
}
hr.v-am-item-tag-divider:after {
    content: "Tags";
    position: relative;
    top: -.7em;
    margin: 0px auto;
    left: 50%;
    /*left: 2em;*/
    /*background-color: #333;*/
    background-color: #212529;
    display: inline-block;
    color: #888;
    padding: 0px 0.2em;
}


.v-am-list li:nth-of-type(odd) hr.v-am-item-tag-divider:after {
    background-color: #32383e;
}



/* Article Has No Description */
.v-am-item-description {
    text-align: center;
    /*color: #777;*/
    color: #800;
}
/* Article Has A Description */
.v-am-item-description.v-has-desc {
    /*color: #ddd;*/
    color: #5bff5b;
}

.v-am-item-description { text-align: start; }

.v-am-item-top a {
    color: #e06500;
}
.v-am-item-top a:hover {
    color: #fff;
}

.v-am-item-detele i {
    color: #dc3545;
}

.v-am-item-detele i:hover {
    /*color: #ff394e;*/
    color: #ff6d7b;
}

#v-am-add {
    /*color: #28a745;*/
    /*color: #27ff27;*/
    color: #5bff5b;
}

.v-am-db {
    color: #ccc;
}

.v-am-sortbar {
    padding: 0.5em 0em 0.5em 0em;
}

.v-del-confirm {
    
}

.v-del-cancel {
    
}

.v-spacer-del {
    display: inline-block;
    width: 30px;
}



/*.v-am-item-desription .tooltip-inner {
    color: #f00 !important;
}
.v-am-item-desription.v-has-desc .tooltip-inner {
    color: #fff;
}*/

.v-manage {
    background-color: #212529;
    font-size: .9em;
    /*background-color: #32383e;*/
    /*border-collapse: separate !important;*/
    /*border: 1px solid #666;*/
    /*border-radius: 1em;*/
    /*padding: 4px;*/
}

.v-manage tr th, .v-manage tr td {
    /*border-color: #888;*/
    background-color: #212529;
    /*border-color: #999;*/
    border-color: #de6d11;
    border-right: 1px dashed #853c01;
    border-left: 1px dashed #853c01;
    padding: 4px .7em;
}

.v-manage thead tr th:hover, 
.v-manage thead tr td:hover 
{
    background-color: #944300;
    /*background-color: #b50;*/
    /*background-color: #de6d11;*/
    /*background-color: #853c01;*/
}
.v-manage tbody tr th:hover, 
.v-manage tbody tr td:hover 
{
    background-color: #de6d11;
    color: #000;
}

.v-manage tbody tr:nth-of-type(odd) th:hover, 
.v-manage tbody tr:nth-of-type(odd) td:hover 
{
    background-color: #de6d11;
    color: #000;
}

.v-manage tbody tr:last-child th,
.v-manage tbody tr:last-child td {
    border-bottom: 1px solid #de6d11;
}

.v-manage tbody tr:nth-of-type(odd) td,
.v-manage tbody tr:nth-of-type(odd) th {
    background-color: #32383e;
    /*.table-striped tbody tr:nth-of-type(odd)*/
}
.v-manage thead th {
    text-align: center;
    font-weight: 800;
    border-bottom: 1px solid #de6d11;
}
/* ... */

